--- a/Italian/main/Contacts.apk/res/values-it/strings.xml
+++ b/Italian/main/Contacts.apk/res/values-it/strings.xml
@@ -76,9 +76,9 @@
     <string name="resource_downloaded_title">Risorse scaricate</string>
     <string name="resource_see_more">Vedi altro</string>
     <string name="resource_no_result">Nessun risultato</string>
-    <string name="resource_failed_to_load_list">Impossibile caricare la lista</string>
+    <string name="resource_failed_to_load_list">Impossibile caricare lista</string>
     <string name="resource_search_list_empty">Nessun risultato</string>
-    <string name="resource_no_network_text">impossibile connettersi alla rete</string>
+    <string name="resource_no_network_text">Impossibile connettersi alla rete.</string>
     <string name="resource_list_title">Ultimo selezionato</string>
     <string name="resource_get_auth_checking">Verifica autorizzazioni…</string>
     <string name="resource_get_auth_retrieving">Recupero autorizzazioni…</string>
@@ -87,6 +87,7 @@
     <string name="resource_get_auth_exceed_max_limit_tips">"Il tema non può essere eseguito su questo dispositivo, hai raggiunto il limite di 10 per dispositivo, prego usare un'altro dispositivo'"</string>
     <string name="resource_server_out_of_service">Il server in questo momento non è disponibile, prego riprovare più tardi.</string>
     <string name="resource_get_auth_has_been_undercarriaged">Questo tema non è più disponibile.</string>
+    <string name="resource_pack_get_auth_has_been_undercarriaged">Questo soggetto non è più disponibile.</string>
     <string name="resource_server_alert_dialog_title">Servizio attualmente non disponibile</string>
     <string name="resource_purchase_getting_order">Recupero info ordine…</string>
     <string name="resource_purchase_waiting_payment">In attesa delle info di pagamento…</string>
@@ -182,22 +183,24 @@
     <string name="resource_user_know">OK</string>
     <string name="resource_hint">Avviso</string>
     <string name="resource_ringtone_volume_mute">La tua suoneria è attualmente silenziata</string>
-    <string name="resource_has_been_downloaded">Hai già scaricato questo tema</string>
-    <string name="resource_no_match_app">Nessuna applicazione trovata per aprire questo file.</string>
-    <string name="resource_title_rank">Classifiche</string>
-    <string name="resource_title_category">categorie</string>
+    <string name="resource_has_been_downloaded">Hai già scaricato questo tema.</string>
+    <string name="resource_no_match_app">Nessuna applicazione trovata per questa azione.</string>
+    <string name="resource_title_rank">Classifichr</string>
+    <string name="resource_title_category">Categorie</string>
     <string name="resource_title_subject">In evidenza</string>
     <string name="resource_title_local">Locali</string>
     <string name="resource_title_hot_subject">Popolari</string>
+    <string name="config_import_vcard_type">default</string>
+    <string name="config_export_vcard_type">v30_generic</string>
     <string name="config_export_dir">/mnt/sdcard</string>
     <string name="config_export_file_prefix" />
     <string name="config_export_file_suffix" />
     <string name="config_export_file_extension">vcf</string>
     <string name="config_export_extensions_to_consider" />
-    <string name="config_prohibited_phone_number_regexp"></string>
+    <string name="config_prohibited_phone_number_regexp" />
     <string name="help_url_people_main" />
     <string name="help_url_people_add" />
-    <string name="help_url_people_edit" />   
+    <string name="help_url_people_edit" />
     <string name="launcherDialer">Telefono</string>
     <string name="people">Contatti</string>
     <string name="contactsList">Contatti</string>
@@ -297,7 +300,7 @@
     <string name="listCustomView">Contatti in visualizzazione personalizzata</string>
     <string name="foundTooManyContacts">Più di %d trovati.</string>
     <string name="listFoundAllContactsZero">Nessun contatto</string>
-    <string name="contactsAllLabel">Contatti</string>
+    <string name="contactsAllLabel">Tutti i contatti</string>
     <string name="contactsGroupsLabel">Gruppi</string>
     <string name="contactsFavoritesLabel">Preferiti</string>
     <string name="dialerIconLabel">Recenti</string>
@@ -714,9 +717,10 @@ Scegli una delle seguenti opzioni:"</string>
     <string name="dialog_voicemail_airplane_mode_message">Per chiamare la segreteria, disattiva prima la modalità Aereo.</string>
     <string name="action_menu_overflow_description">Altre opzioni</string>
     <string name="yellowpage_navigation_network_location_enabled">Service is open, you could disable it in location settings</string>    
+    <string name="yellowpage_search_the_yellowpage">Cerca nella cartella</string>
     <string name="import_from_sim">Importa da SIM</string>
-    <string name="import_from_sim2">Importa da SIM 2</string>
     <string name="export_to_sim_title">Esportazione…</string>
+    <string name="import_from_sim2">Importa da SIM 2</string>
     <string name="import_from_sim1">Importa da SIM 1</string>
     <string name="sim_no_contact">Nessun contatto sulla carta SIM</string>
     <string name="sim_indexed_contact_not_exist">La posizione %1$d sulla carta SIM non è valida: deve essere compresa tra %2$d e %3$d.</string>
@@ -800,6 +804,8 @@ Scegli una delle seguenti opzioni:"</string>
     <string name="calllog_menu_blacklist">Blocca</string>
     <string name="calllog_menu_edit_before_call">Modifica</string>
     <string name="calllog_menu_send_sms">Invia un messaggio</string>
+    <string name="call_sim1_menu_title">Componi con SIM 1</string>
+    <string name="call_sim2_menu_title">Componi con SIM 2</string>
     <string name="menu_call_ip_number">Effettua chiamata IP (al numero %s)</string>
     <string name="menu_dial_ip_number">Effettua una chiamata IP</string>    
     <string name="delete_contact_calllog_title">Cancellare i registri chiamate?</string>
@@ -1140,4 +1146,7 @@ Tocca l'icona Unisci in basso per iniziare."</string>
     <string name="scan_qrcode_card_hint1">Scansiona codice QR</string>
     <string name="scan_qrcode_card_hint2">Aggiungi le mie informazioni ai tuoi contatti</string>
     <string name="create_qrcode_fail_message">Creazione codice QR fallita</string>
+    <string name="pull_to_refresh_pull_label">Scorri in basso per aggiornare…</string>
+    <string name="pull_to_refresh_release_label">Rilascia per aggiornare…</string>
+    <string name="pull_to_refresh_refreshing_label">Caricamento…</string>
 </resources>
