--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -8,17 +8,17 @@
     <string name="cta_settings">"Consenti l'utilizzo della rete dati"</string>
     <string name="title_optimizer">Pulizia</string>
     <string name="header_optimizer">Utilizzando questa funzione accetti i <a href="http://www.cmcm.com/about/privacy_zh.html?p=cm">Termini del Servizio</a> di Clean Master.</string>
-    <string name="name_optimizer">"Informativa Privacy di Cheetah Mobile"</string>
+    <string name="name_optimizer">Informativa sulla Privacy di Cheetah Mobile</string>
     <string name="text_optimizer">Utilizza il motore di Pulizia online</string>
     <string name="summary_optimizer">Carica e confronta i nomi delle cartelle sconosciute con il database online</string>
     <string name="button_optimizer">OK</string>
     <string name="title_antivirus">Scansione Virus</string>
-    <string name="header_antivirus">"Questa funzione crittografa ed invia l'ID del dispositivo sui server Tencent (%s)"</string>
-    <string name="name_antivirus">"Leggi l'Informativa sulla Privacy"</string>
-    <string name="text_antivirus">Utilizza database virus online</string>
-    <string name="text_antivirus_oversea">Aggiorna database virus</string>
+    <string name="header_antivirus">Utilizzando questa funzione accetti i "<a href="http://misc.3g.qq.com/g/agreement/index.jsp?id=7">Termini del Servizio</a> di Tencent.</string>
+    <string name="name_antivirus">"Mostra l'Informativa sulla Privacy"</string>
+    <string name="text_antivirus">Carica nomi applicazioni e dettagli</string>
+    <string name="text_antivirus_oversea">Aggiorna definizioni visrus</string>
     <string name="summary_antivirus">Carica e controlla nome e dettagli applicazioni utilizzando il database virus online.</string>
-    <string name="summary_antivirus_oversea">Aggiorna automaticamente database virus</string>
+    <string name="summary_antivirus_oversea">Aggiorna automaticamente le definizioni virus</string>
     <string name="button_antivirus">OK</string>
     <string name="power_center_title">Batteria</string>
     <string name="power_center_consume_rank">Utilizzo batteria</string>
@@ -231,26 +231,26 @@
     <string name="legal_workday">Festivi</string>
     <string name="never">Solo una volta</string>
     <string name="power_20s_shutdown">Il dispositivo si spegnerà tra 20 secondi</string>
-    <string name="boot_reminder_day">Il dispositivo si accenderà tra %1$dd %2$dh %3$d minuti</string>
-    <string name="boot_reminder_hour">Il dispositivo si accenderà tra %1$dh %2$d minuti</string>
+    <string name="boot_reminder_day">Il dispositivo si accenderà tra %1$d giorni %2$d ore e %3$d minuti</string>
+    <string name="boot_reminder_hour">Il dispositivo si accenderà tra %1$dore e %2$d minuti</string>
     <string name="boot_reminder_minute">Il dispositivo si accenderà tra %1$d minuti</string>
     <string name="boot_reminder_only_hour">Il dispositivo si accenderà tra %1$d ore</string>
     <string name="boot_reminder_only_day">Il dispositivo si accenderà tra %1$d giorni</string>
     <string name="boot_reminder_day_hour">Il dispositivo si accenderà tra %1$d giorni e %2$d ore</string>
-    <string name="boot_reminder">Accendi il dispositivo ad un orario programmato</string>
-    <string name="shutdown_cancel_reminder">Non si è spento</string>
+    <string name="boot_reminder">Accendi il tuo dispositivo ad un orario programmato</string>
+    <string name="shutdown_cancel_reminder">Il dispositivo non si è spento</string>
     <string name="shutdown_cancel_reminder_detail">Il dispositivo non si è spento perchè era in corso una chiamata</string>
     <string name="legal_workday_invalidate">Dati scaduti (Attualmente attivo da Lunedì a Venerdì)</string>
     <string name="legal_workday_invalidate_message">(Dati scaduti,premi per aggiornare interconnessioni)</string>
     <string name="legal_workday_message">(Salta le festività)</string>
-    <string name="boot_time_day">Il dispositivo si accenderà tra %1$dd alle %2$s</string>
-    <string name="boot_time">Il dispositivo si accenderà tra %1$s</string>
-    <string name="shutdown_time_day">Il dispositivo si spegnerà tra %1$dd alle %2$s</string>
-    <string name="shutdown_time">Il dispositivo si spegnerà tra %1$s</string>
-    <string name="boot_day_shutdown_day">Il dispositivo si accenderà tra %1$dd alle %2$s e si spegnerà tra %3$dd alle %4$s</string>
-    <string name="shutdown_day_boot_day">Il dispositivo si spegnerà tra %1$dd alle %2$s e si accenderà tra %3$dd alle %4$s</string>
-    <string name="shutdown_boot_day">Il dispositivo si spegnerà alle %1$s e si accenderà tra %2$dd alle %3$s</string>
-    <string name="boot_shutdown_day">Il dispositivo si accenderà alle %1$s e si spegnerà tra %2$dd alle %3$s</string>
+    <string name="boot_time_day">Il dispositivo si accenderà tra %1$d giorni, alle %2$s</string>
+    <string name="boot_time">Il dispositivo si accenderà alle %1$s</string>
+    <string name="shutdown_time_day">Il dispositivo si spegnerà tra %1$d giorni, alle %2$s</string>
+    <string name="shutdown_time">Il dispositivo si spegnerà alle %1$s</string>
+    <string name="boot_day_shutdown_day">Il dispositivo si accenderà tra %1$d giorni, alle %2$s e si spegnerà tra %3$d giorni, alle %4$s</string>
+    <string name="shutdown_day_boot_day">Il dispositivo si spegnerà tra %1$d giorni, alle %2$s e si accenderà tra %3$d giorni, alle %4$s</string>
+    <string name="shutdown_boot_day">Il dispositivo si spegnerà alle %1$s e si accenderà tra %2$d giorni, alle %3$s</string>
+    <string name="boot_shutdown_day">Il dispositivo si accenderà alle %1$s e si spegnerà tra %2$d giorni, alle %3$s</string>
     <string name="boot_shutdown">Il dispositivo si accenderà alle %1$s e si spegnerà alle %2$s</string>
     <string name="shutdown_boot">Il dispositivo si spegnerà alle %1$s e si accenderà alle %2$s</string>
     <string name="app_name_securitycenter">Sicurezza</string>
@@ -351,7 +351,7 @@
     <string name="protection_category_dangerous_title">Rischi (%d)</string>
     <string name="protection_category_recommend_title">Modifiche consigliate (%d)</string>
     <string name="protection_category_security_title">Puliti (%d)</string>
-    <string name="title_virus_no">Virus rilevati</string>
+    <string name="title_virus_no">Viruse rilevati</string>
     <string name="title_virus_yes">Nessun virus rilevato</string>
     <string name="summary_virus">Trovati %2$d virus</string>
     <string name="title_permission_no">Monitor permessi disattivato</string>
@@ -634,8 +634,8 @@
     <string name="scanning_bar_number">%d%%</string>
     <string name="scanning_bar_system_text">Permessi app</string>
     <string name="hints_scanning_text">Scansione…</string>
-    <string name="auto_handle_title">GENERALI</string>
-    <string name="manual_handle_title">FEATURE DISPONIBILI</string>
+    <string name="auto_handle_title">GENERAL</string>
+    <string name="manual_handle_title">AVAILABLE FEATURES</string>
     <string name="manual_item_white_list_title">Eccezioni</string>
     <string name="manual_item_white_list_summary">Evita che le app selezionate vengano ottimizzate</string>
     <string name="delete_from_manual_item_white_list">Rimuovi dalle eccezioni</string>
@@ -648,8 +648,8 @@
     <string name="summary_cloud_account">Ottieni il massimo dal tuo Dispositivo Mi</string>
     <string name="title_cloud_service">Mi Cloud</string>
     <string name="summary_cloud_service">Sincronizza le tue foto,i contatti e molto altro su tutti i tuoi dispositivi</string>
-    <string name="title_network_switch">Permetti connessione ad Internet</string>
-    <string name="summary_network_switch">"Consenti all'app Sicurezza di connettersi ad Internet"</string>
+    <string name="title_network_switch">Consenti connessione Internet</string>
+    <string name="summary_network_switch">"Consenti all'applicazione Sicurezza di collegarsi ad nternet"</string>
     <string name="title_power_optimizer">Risparmio batteria</string>
     <string name="summary_power_optimizer">Riduci le prestazioni del tuo dispositivo quando la batteria è scarica</string>
     <string name="title_data_flow">"Imposta un avviso per l'utilizzo dei dati"</string>
@@ -681,7 +681,7 @@
     <string name="summary_virus_cloudscan">Carica nomi app e dettagli e controlla utilizzando le definizioni online</string>
     <string name="title_cleaner_cloudscan">Utilizza motore di pulizia online</string>
     <string name="summary_cleaner_cloudscan">Carica e confronta i nomi sconosciuti delle carte con il database online</string>
-    <string name="toast_network_switch">Questa applicazione può connettersi ad Internet</string>
+    <string name="toast_network_switch">Questa applicazione può collegarsi ad Internet</string>
     <string name="toast_flow_notification">Notifiche utilizzo dati attivate</string>
     <string name="toast_show_notification">Inserto nel pannello di notifica</string>
     <string name="toast_virus_cloudscan">La scansione virus utilizzerà il database online</string>
@@ -697,21 +697,29 @@
     <string name="pref_summary_auto_clean_and_alert">Imposta la pulizia automatica</string>
     <string name="pref_category_title_other_clean_settings">Impostazioni aggiuntive</string>
     <string name="pref_title_garbage_process_mode">Notifiche</string>
-    <string name="pref_summary_garbage_process_mode">Imposta notifiche quando la pulizia è in esecuzione</string>
-    <string name="pref_title_garbage_auto_clean_content">Scegli gli elementi</string>
-    <string name="pref_summary_garbage_auto_clean_content">Scegli quali elementi pulire automaticamente</string>
+    <string name="pref_summary_garbage_process_mode">Imposta notifiche per la pulizia</string>
+    <string name="pref_title_garbage_auto_clean_content">Seleziona gli elementi da pulire</string>
+    <string name="pref_summary_garbage_auto_clean_content">Seleziona gli elementi da pulire automaticamente</string>
     <string name="pref_content_cleanup_white_list_none">Nessuno</string>
-    <string name="auto_clean_switch_on">On</string>
-    <string name="auto_clean_switch_off">Off</string>
+    <string name="auto_clean_switch_on">Attivato</string>
+    <string name="auto_clean_switch_off">Disattivato</string>
     <string name="item_title_process_mode">"Scegli un'azione"</string>
-    <string name="pref_title_auto_clean_content_choose">Scegli elementi da pulire</string>
+    <string name="pref_title_auto_clean_content_choose">Seleziona elementi da pulire</string>
     <string name="clean_content_zero">Non pulire niente</string>
     <string name="clean_content_one">%s</string>
     <string name="clean_content_two">%1$s e %2$s</string>
     <string name="clean_content_three">Salta %s</string>
     <string name="clean_content_all">Tutto</string>
     <string name="notification_summary_after_auto_cleanup">Pulito %s.</string>
-    <string name="pref_category_title_lock_screen_memory_clean">Pulisci al blocco</string>
-    <string name="pref_title_lock_screen_memory_clean">Pulisci al blocco</string>
-    <string name="pref_summary_lock_screen_memory_clean">Pulisci automaticamente quando il dispositivo viene bloccato</string>
+    <string name="pref_category_title_lock_screen_memory_clean">Pulizia su lockscreen</string>
+    <string name="pref_title_lock_screen_memory_clean">Pulizia su lockscreen</string>
+    <string name="pref_summary_lock_screen_memory_clean">Pulisci automaticamente quando il dispositivo è bloccato</string>
+    <string name="title_delete_large_file">Eliminare questo file?</string>
+    <string name="summary_delete_large_file">Alcuni file di grandi dimensioni possono essere utili quando non si ha una connessione Internet a disposizione (es: mappe, agende, etc.). Assicurati di non aver bisogno di questi file.</string>
+    <string name="title_delete_cache">Eliminare dati cache</string>
+    <string name="summary_delete_cache">Alcune applicazioni potrebbero aver bisogno di questi file per funzionare correttamente.</string>
+    <string name="positive_confirm">OK</string>
+    <string name="title_auto_cleaner">Pulire automaticamente?</string>
+    <string name="summary_auto_cleaner">Pulire automaticamente il sistema ogni 3 giorni?</string>
+    <string name="confirm_auto_cleaner">OK</string>
 </resources>
