--- a/Italian/main/ContactsProvider.apk/res/values-it/strings.xml
+++ b/Italian/main/ContactsProvider.apk/res/values-it/strings.xml
@@ -22,6 +22,7 @@
     <string name="pound_search_tip">Inserisci un numero dopo # per cercare nei contatti</string>
     <string name="create_contact">Nuovo contatto</string>
     <string name="send_sms">Invia messaggio</string>
+    <string name="search_the_yellowpage">Cerca nella cartella</string>
     <string name="edit_contact">Aggiungi a contatto</string>
     <string name="call_log_provider_label">Registro chiamate</string>
     <string name="third_party_delete_contact_info">"\"%s\" sta cercando di eliminare i tuoi contatti. Questa azione non può essere eseguita da applicazioni di terze parti. Per eliminare i contatti utilizza l'applicazione Contatti integrata in MIUI."</string>
