--- a/Italian/main/FM.apk/res/values-it/strings.xml
+++ b/Italian/main/FM.apk/res/values-it/strings.xml
@@ -47,8 +47,8 @@
     <string name="toast_added_to_presets">Aggiunto ai predefiniti</string>
     <string name="toast_added_to_list">Aggiunta alla lista stazioni</string>
     <string name="toast_removed_from_presets">Rimosso dai predefiniti</string>
-    <string name="toast_fm_starting">Starting…</string>
-    <string name="toast_fm_seeking">Seeking…</string>
+    <string name="toast_fm_starting">Avvio…</string>
+    <string name="toast_fm_seeking">Ricerca…</string>
     <string name="station_check_favorite">Aggiungi ai preferiti</string>
     <string name="toast_fm_recorder_internal_error">Errore registrazione FM.</string>
     <string name="toast_fm_recorder_storage_full">Memoria piena,la registrazione non può essere effettuata</string>
@@ -59,5 +59,5 @@
     <string name="txt_sleep_mode">Modalità sospensione</string>
     <string name="txt_divider">" | "</string>
     <string name="group_favor">Preselezioni</string>
-    <string name="group_other">Altro</string>
+    <string name="group_other">Altri</string>
 </resources>
