--- a/Italian/main/Mms.apk/res/values-it/strings.xml
+++ b/Italian/main/Mms.apk/res/values-it/strings.xml
@@ -187,7 +187,7 @@
     <string name="delivery_toast_body">Messaggio correttamente inviato a %s</string>
     <string name="notification_multiple">%s messaggi non letti.</string>
     <string name="notification_multiple_title">Nuovi messaggi</string>
-    <string name="notification_failed_multiple">%s messaggi potrebbero non essere inviati.</string>
+    <string name="notification_failed_multiple">%s messaggi potrebbere non essere inviati.</string>
     <string name="notification_failed_multiple_title">Messaggi non inviati</string>
     <string name="sim_full_body">Elimina alcuni messaggi SIM per fare spazio.</string>
     <string name="sms_full_title">Memoria SMS piena</string>
@@ -516,26 +516,27 @@
     <string name="pref_title_festival_networking">Notifica connessione</string>
     <string name="hms_add_image_progress_message">Elaborazione…</string>
     <string name="view_hms_attachment_fail">Impossibile scaricare immagine</string>
-    <string name="mx_type_guide">Invia e ricevi messaggi gratuitamente con gli utenti che utilizzano questa funzione</string>
-    <string name="mx_dspt_provision">Mi Message ti consente di inviare messaggi ad altri utenti MIUI senza costi. Il tuo operatore potrebbe addebitarti il costo di un SMS necessario per attivare questo servizio.</string>
-    <string name="mx_activate_user_agreement_p1">"Utilizzando questo servizio, accetti "</string>
+    <string name="mx_type_guide">Mi Message ti permette di inviare messaggi ad altri utenti MIUI senza i costi degli SMS</string>
+    <string name="mx_dspt_provision">"Mi Message ti permette di inviare messaggi ad altri utenti MIUI senza i costi degli SMS. Il tuo operatore potrebbe addebitarti il costo di un SMS per l'attivazione del servizio."</string>
+    <string name="mx_activate_user_agreement_p1">"Utilizzando questo servizio manifesti il tuo consenso ai termini di utilizzo Mi Message, quali: "</string>
     <string name="mx_activate_dlg_title">Attiva Mi Message</string>
     <string name="resource_price_free">Gratis</string>
-    <string name="menu_send_as_common">Invia come SMS</string>
+    <string name="menu_send_as_common">Invica come SMS</string>
     <string name="message_sent">Inviato</string>
     <string name="mx2_type_description">[%s]</string>
     <string name="left_cancel">Scorri a sinistra per annullare</string>
     <string name="release_cancel">Rilascia per annullare</string>
-    <string name="press_recording">"Tieni premuto l'icona del microfono per registrare"</string>
-    <string name="warning_show">Invio tra %ds</string>
+    <string name="press_recording">"Tieni premuta l'icona del microfono per registrare Mic"</string>
+    <string name="warning_show">Invia tra %ds</string>
     <string name="audio_playing_seconds">%d\"</string>
     <string name="playing_failed">Impossibile riprodurre</string>
-    <string name="cannot_resend_audio">Impossibile inviare registrazione</string>
+    <string name="cannot_resend_audio">Impossibile inviare la registrazione</string>
     <string name="recording_failed">Impossibile registrare</string>
-    <string name="downloading_file_can_not_play">Attendi fino alla fine del download</string>
+    <string name="downloading_file_can_not_play">Attendi finché la registrazione non ha terminato il downlaod</string>
     <string name="guild_msim_switcher">Tocca per cambiare SIM</string>
-    <string name="sdcard_has_not_enough_space">Spazio insufficiente sulla scheda SD</string>
+    <string name="sdcard_has_not_enough_space">Spazio insuficiente sulla scheda SD</string>
     <string name="snippet_audio">[audio]</string>
     <string name="snippet_picture">[picture]</string>
-    <string name="audio_download_failed">Downlaod audio fallito</string>
+    <string name="audio_download_failed">Impossibile scaricare audio</string>
+    <string name="hms_uri_param_err">"L'URL non può essere vuota"</string>
 </resources>
