--- a/Italian/main/Notes.apk/res/values-it/strings.xml
+++ b/Italian/main/Notes.apk/res/values-it/strings.xml
@@ -40,7 +40,7 @@
     <string name="alert_message_delete_folders_notes">Eliminare le %1$s cartelle e le %2$s note?</string>
     <string name="alert_message_delete_note">Sicuro di voler eliminare questa nota?</string>
     <string name="format_move_notes_to_folder">%1$d nota(e) spostata(e) nella cartella %2$s</string>
-    <string name="format_move_notes_out_folder">%1$s spostate</string>
+    <string name="format_move_notes_out_folder">%1$s spostata(e) fuori</string>
     <string name="alert_title_edit_anyway">Questa nota contiene contenuti non supportati</string>
     <string name="alert_message_edit_anyway">Se si modifica questa nota alcuni dei suoi contenuti andranno persi.</string>
     <string name="alert_action_edit_anyway">Continua la modifica</string>
@@ -67,6 +67,7 @@
     <string name="notify_alarm_title">Promemoria sveglia</string>
     <string name="alarm_bar_title">Promemoria</string>
     <string name="toast_message_add_image_fail">Impossibile inserire immagine!</string>
+    <string name="toast_message_add_text_warn">Questo tipo di file non è supportato</string>
     <string name="toast_folder_privacy_mode">Impossibile modificare cartella in modalità Guard</string>
     <string name="toast_note_privacy_mode">Impossibile creare note in modalità Ospite</string>
     <string name="toast_reach_text_limit_truncate">Il contenuto della nota è stato tagliato perchè troppo lungo.</string>
@@ -89,6 +90,7 @@
     <string name="permdesc_accessNote">Le applicazioni dannose potrebbero sfruttare questa possibilità per accedere le tue informazioni personali.</string>
     <string name="undo">Annulla</string>
     <string name="redo">Ripristina</string>
+    <string name="loading_text">Caricamento…</string>
     <string name="sns_title_edit">Modifica titolo</string>
     <string name="sns_title_send">Invia messaggio</string>
     <string name="sns_action_send">Invia</string>
